--- a/index.html
+++ b/index.html
@@ -540,5 +540,6 @@
     <script src="js/api.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/posts.js"></script>
+    <script src="js/tests.js"></script>
   </body>
 </html>
