--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
       </div>
 
-      <div class="alert alert-danger d-none" id="error-alert"></div>
+      <div class="alert alert-danger" style="display: none;" id="error-alert"></div>
 
       <div class="card shadow-sm">
         <div class="card-body p-0">
