Refactor and upgrade code

--- a/reports.html
+++ b/reports.html
@@ -317,5 +317,6 @@
     <script src="js/api.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/reports.js"></script>
+    <script src="js/tests.js"></script>
   </body>
 </html>
